Dibuat menggunakan Colab

--- a/1_Fungsi_print_Noviana_rizki_nugraheni_kelas_x_11.ipynb
+++ b/1_Fungsi_print_Noviana_rizki_nugraheni_kelas_x_11.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOpQ+6luosww0v+SdDrU9D3",
+      "authorship_tag": "ABX9TyNM/KrTWtzU7nVznQ7KQTdi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,425 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Noviananugraheni25/KKA-x-semester-1/blob/main/1_Fungsi_print_Noviana_rizki_nugraheni_kelas_x_11.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Nama : noviana rizki nugraheni\n",
+        "\n",
+        "kelas:x11\n",
+        "\n",
+        "No absen:25"
+      ],
+      "metadata": {
+        "id": "MjSxT2_2__Sx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Menampilkan teks bebas"
+      ],
+      "metadata": {
+        "id": "Pb-pxgrGAQyx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"noviana rizki nugraheni\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ONobiPEJAU-i",
+        "outputId": "7e84323a-f4a0-455d-f585-262cb9114aaa"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "noviana rizki nugraheni\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"jenis blackpink\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "p-lBc-1PAiXF",
+        "outputId": "a6a09c25-9ea0-406b-80cd-4e6b7cc905dd"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "jenis blackpink\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Menampilkan nilai variabel"
+      ],
+      "metadata": {
+        "id": "8GlTcHU_ApTs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nama_saudara=\"ayu Rusli\"\n",
+        "print(nama_saudara)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WB42iJc_AwM0",
+        "outputId": "c6b985f0-1b3d-4c10-c0ba-a7f298d34bc8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ayu Rusli\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "jumlah_saudara=3\n",
+        "print(jumlah_saudara)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nYlP3MFgBAFh",
+        "outputId": "bc1ab154-9105-492f-a741-25581c548148"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nama_idola = \"rafi ahamad\"\n",
+        "print (nama_idola)\n",
+        "print (\"nama_idola\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "89vWS4ieBJ8V",
+        "outputId": "b9a5cfe7-523e-444b-c769-abc2cdfcbe8b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "rafi ahamad\n",
+            "nama_idola\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Menampilkan  teks bebas dan nilai varianel"
+      ],
+      "metadata": {
+        "id": "q0eH8h5hBZ5m"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Menampilkan teks bebas dan nilai variabel Menggunakan tanda koma"
+      ],
+      "metadata": {
+        "id": "0PZq-JV1BnyV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (\"saya memiliki saudara sebanyak \", nama_saudara)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xx445IUIB3Da",
+        "outputId": "5efe9bc2-00ee-4706-d29f-f125d58128de"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "saya memiliki saudara sebanyak  ayu Rusli\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Menampilkan teks bebas dan nilai variabel menggunakan tanda plus"
+      ],
+      "metadata": {
+        "id": "hv_106-HCY6A"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Menampilkan teks bebas dan nilai variabel menggunakan f string"
+      ],
+      "metadata": {
+        "id": "6FzdfNBeD9F7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##escape carakter"
+      ],
+      "metadata": {
+        "id": "zKqVYpwyI6TH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Nama: noviana rizki nugraheni\")\n",
+        "print(\"Kelas: X. 11\")\n",
+        "print(\"No.Absen:25\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PRxmsDYTI_QU",
+        "outputId": "bddd5edb-5d1a-4e24-e742-1963583d04fa"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nama: noviana rizki nugraheni\n",
+            "Kelas: X. 11\n",
+            "No.Absen:25\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (f\"saya memiliki saudara sebanyak{jumlah_saudara}.Nama saudara saya adalah{nama_saudara}.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oS-AlSVeELJe",
+        "outputId": "4db60791-0a94-4f92-d20e-262222e97f34"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "saya memiliki saudara sebanyak3.Nama saudara saya adalahayu Rusli.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Nama:Noviana rizki nugraheni\\nkelas: x 11\\nNo. Absen:29\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BNJ2ijJEJurM",
+        "outputId": "04db0830-3590-49ac-88c8-2308f483bac0"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nama:Noviana rizki nugraheni\n",
+            "kelas: x 11\n",
+            "No. Absen:29\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print ('Noviana rizkinugraheni')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wo1GiyuvKS8R",
+        "outputId": "88a9f9fd-c2dc-428a-9704-0426a94afef8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Noviana rizkinugraheni\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('rafi ahamad')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bKd3YslIKiAA",
+        "outputId": "6fa2d924-0432-4e4d-8164-dd04e599b487"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "rafi ahamad\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('rafi halilintar')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hq9lM5VeKrU6",
+        "outputId": "1f7660b6-78ee-4e71-abbf-0cf592a37ea8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "rafi halilintar\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Bu sinta berkata, \"Harap fokus menyimak! \".')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NLgnSUg5KxPM",
+        "outputId": "61424e93-76ac-414a-8624-e3e89673bb63"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bu sinta berkata, \"Harap fokus menyimak! \".\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"lokasi penyimpanan tugas KkA di D:\\MAN Demak\\\\MAN Demak \\\\ KKA\\\\Tugas \")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-hejaPtnLMxs",
+        "outputId": "75cdd419-c85c-4d6a-875e-34e52fe4739c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "lokasi penyimpanan tugas KkA di D:\\MAN Demak\\MAN Demak \\ KKA\\Tugas \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<>:1: SyntaxWarning: invalid escape sequence '\\M'\n",
+            "<>:1: SyntaxWarning: invalid escape sequence '\\M'\n",
+            "/tmp/ipython-input-913069199.py:1: SyntaxWarning: invalid escape sequence '\\M'\n",
+            "  print(\"lokasi penyimpanan tugas KkA di D:\\MAN Demak\\\\MAN Demak \\\\ KKA\\\\Tugas \")\n"
+          ]
+        }
       ]
     },
     {
